# etfwind

./: .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  start.sh  supabase_schema.sql
.github/workflows/: analyze_news.yml  collect_news.yml  daily_news.yml
config/: etf_master.json  etf_sectors.json
scripts/: update_etf_master.py
src/: analyze_news.py  collect_news.py  config.py  worker.py  worker_simple.py
src/analyzers/: claude_analyzer.py  incremental_analyzer.py  news_digest.py  news_filter.py  preprocessor.py  prompts.py  realtime.py
src/collectors/: __init__.py  bbc.py  cctv_playwright.py  chinatimes_playwright.py  cls_playwright.py  huanqiu.py  huxiu.py  ltn.py  playwright_base.py  reuters.py  rss_base.py  sina_playwright.py  techcrunch.py  udn_playwright.py  xinhua_playwright.py
src/invest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: __init__.py  schemas.py
src/services/: ai_client.py  fund_service.py  web_parser.py  wordcloud_service.py
src/utils/: __init__.py  timezone.py
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260127031008_add_market_narrative.sql  20260127033000_create_focus_events_table.sql
workers/: CLAUDE.md
workers/src/: index.ts  types.ts
workers/src/pages/: Cycle.ts  Home.ts  styles.ts
workers/src/services/: fund.ts
