[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # HTTP client
    "httpx>=0.27.0",
    # AI SDK
    "anthropic>=0.40.0",
    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Logging
    "loguru>=0.7.0",
    # Email
    "aiosmtplib>=3.0.0",
    # Web
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
    # Database
    "supabase>=2.0.0",
    # Web scraping
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
]
