[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etfwind"
version = "0.1.0"
description = "ETF风向标 - AI驱动的ETF投资风向分析工具"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "wordcloud>=1.9.0",
]
